修改二维码图片大小

--- a/app/templates/wechat.html
+++ b/app/templates/wechat.html
@@ -63,6 +63,7 @@
             </div>
             <div class="col-md-10 column">
                 {% block wxlogin %}
+                    哈哈哈哈哈哈哈
                 {% endblock %}
             </div>
                 {#
