--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,12 @@
 <html>
 <head>
 
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-switch.min.css" rel="stylesheet">
+
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap-switch.min.js"></script>
     {% block script %}
     {% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
