--- a/app/templates/wechat.html
+++ b/app/templates/wechat.html
@@ -6,7 +6,6 @@
     ('/wechat/setting', 'wechat_setting', '微信设置'),
     ('/wechat/wxlogout', 'wechat_wxlogout', '退出微信')
 ] -%}
-
 {% block script %}
     <script >
         function wxsendmsg(toid,totext) {
@@ -37,7 +36,8 @@
             $.post('/wechat/setting',{
                 type:'adminphoneset',
                 phone1:$('#adminphone1').val(),
-                phone2:$('#adminphone2').val()
+                phone2:$('#adminphone2').val(),
+{#                OnSend:$('#OnSendalarmMsg').bootstrapSwitch('state')#}
             }).done(function (wxadminphoneset) {
                 alert(wxadminphoneset['text'])
             })
