wechat 界面增加消息记录展示

--- a/app/templates/wechat.html
+++ b/app/templates/wechat.html
@@ -4,6 +4,7 @@
     ('/wechat', 'wechat_login', '登录微信'),
     ('/wechat/wxfriends', 'wechat_wxfriends', '好友列表'),
     ('/wechat/setting', 'wechat_setting', '微信设置'),
+    ('/wechat/wxrecord', 'wechat_record', '消息记录'),
     ('/wechat/wxlogout', 'wechat_wxlogout', '退出微信')
 ] -%}
 {% block script %}
