--- a/app/templates/wxchat/setting.html
+++ b/app/templates/wxchat/setting.html
@@ -101,7 +101,7 @@
                                     <td>
                                         <div class="input-group">
                                             <span class="input-group-addon">Token:</span>
-                                            <input id="Apitokeninput" disabled="true" type="text" class="form-control" value="{{ function_list['adminphone'][:11] }}">
+                                            <input id="Apitokeninput" disabled="true" type="text" class="form-control" value="{{ function_list['Apitoken'] }}">
                                         </div>
                                     </td>
                                 </tr>
